projects/olp/y.output

state 0
	$accept : _object $end 

	ID  shift 3
	.  error

	object  goto 1
	objname  goto 2

state 1
	$accept :  object_$end 

	$end  accept
	.  error


state 2
	object :  objname_OBJDELINEATOR nodevalues DELINEATOR 

	OBJDELINEATOR  shift 4
	.  error


state 3
	objname :  ID_    (2)

	.  reduce 2


state 4
	object :  objname OBJDELINEATOR_nodevalues DELINEATOR 

	ID  shift 7
	.  error

	nodevalues  goto 5
	nodevalue  goto 6

state 5
	object :  objname OBJDELINEATOR nodevalues_DELINEATOR 
	nodevalues :  nodevalues_nodevalue 

	DELINEATOR  shift 8
	ID  shift 7
	.  error

	nodevalue  goto 9

state 6
	nodevalues :  nodevalue_    (4)

	.  reduce 4


state 7
	nodevalue :  ID_TIE value DELINEATOR 
	nodevalue :  ID_TIE object DELINEATOR 

	TIE  shift 10
	.  error


state 8
	object :  objname OBJDELINEATOR nodevalues DELINEATOR_    (1)

	.  reduce 1


state 9
	nodevalues :  nodevalues nodevalue_    (3)

	.  reduce 3


state 10
	nodevalue :  ID TIE_value DELINEATOR 
	nodevalue :  ID TIE_object DELINEATOR 
	value : _    (8)

	CHARACTER  shift 15
	DIGIT  shift 16
	PUNCTUATE  shift 17
	OPERATOR  shift 18
	SPACE  shift 19
	ID  shift 3
	.  reduce 8

	object  goto 12
	objname  goto 2
	value  goto 11
	string  goto 13
	strtype  goto 14

state 11
	nodevalue :  ID TIE value_DELINEATOR 

	DELINEATOR  shift 20
	.  error


state 12
	nodevalue :  ID TIE object_DELINEATOR 

	DELINEATOR  shift 21
	.  error


state 13
	value :  string_    (7)
	string :  string_strtype 

	CHARACTER  shift 15
	DIGIT  shift 16
	PUNCTUATE  shift 17
	OPERATOR  shift 18
	SPACE  shift 19
	.  reduce 7

	strtype  goto 22

state 14
	string :  strtype_    (15)

	.  reduce 15


state 15
	strtype :  CHARACTER_    (9)

	.  reduce 9


state 16
	strtype :  DIGIT_    (10)

	.  reduce 10


state 17
	strtype :  PUNCTUATE_    (11)

	.  reduce 11


state 18
	strtype :  OPERATOR_    (12)

	.  reduce 12


state 19
	strtype :  SPACE_    (13)

	.  reduce 13


state 20
	nodevalue :  ID TIE value DELINEATOR_    (5)

	.  reduce 5


state 21
	nodevalue :  ID TIE object DELINEATOR_    (6)

	.  reduce 6


state 22
	string :  string strtype_    (14)

	.  reduce 14


12/127 terminals, 7/600 nonterminals
16/300 grammar rules, 23/1000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
13/601 working sets used
memory: states,etc. 59/2000, parser 11/4000
9/3001 distinct lookahead sets
4 extra closures
19 shift entries, 1 exceptions
10 goto entries
1 entries saved by goto default
Optimizer space used: input 53/2000, output 34/4000
34 table entries, 5 zero
maximum spread: 266, maximum offset: 266
